<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pprzy.eZdrowie.WeightActivity"
    tools:showIn="@layout/app_bar_weight"
    android:id="@+id/layout_waga"
    android:foreground="@drawable/shape_window_dim"
    android:background="@mipmap/heart_background">
    <!--android:foreground="@drawable/shape_window_dim"-->


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:scaleType="matrix"
        app:srcCompat="@drawable/transparent_background_" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">


            <Button
                android:id="@+id/showPopupBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_bmi_obliczone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:text="Co to oznacza?"
                android:textStyle="bold"

                tools:text="Co to oznacza?" />


            <TextView
                android:id="@+id/textView_opis1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_dane1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/ekran_wagi"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView_weight1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView_opis1"
                android:layout_below="@+id/textView_opis1"
                android:layout_marginTop="50dp"
                android:text="@string/opis_waga_dzienna"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView_bmi"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView_waga_kalend"
                android:layout_below="@+id/editText_puls"
                android:layout_marginTop="50dp"
                android:text="@string/opis_waga_bmi"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView_waga_kalend"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView_weight1"
                android:layout_below="@+id/showPopupBtn"
                android:layout_marginTop="75dp"
                android:text="@string/opis_waga_dzienna2"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView_dane1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="Moja waga"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:text="Moja waga" />


            <EditText
                android:id="@+id/editText_dzienna_waga"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_below="@+id/textView_opis1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="83dp"
                android:background="@color/background_material_light_1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:text="Twoja waga"
                android:textAlignment="center"
                android:textColor="@color/background_material_light_5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/editText_puls"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_dzienna_waga"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:text="ZATWIERDŹ"
                android:textStyle="bold
"
                tools:text="ZATWIERDŹ" />



            <DatePicker
                android:id="@+id/datePickerWeight"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_waga_kalend"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:background="#aaffffff" />

            <EditText
                android:id="@+id/waga_z_dnia"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_pokaz_wage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="29dp"
                android:background="#55ffffff"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:text="00"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_pokaz_wage"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datePickerWeight"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:text="POKAŻ"
                android:textStyle="bold"
                tools:text="POKAŻ" />

            <Button
                android:id="@+id/button_zmien_wage"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button_usun_wage"
                android:layout_alignBottom="@+id/button_usun_wage"
                android:layout_alignStart="@+id/datePickerWeight"
                android:text="ZAPISZ"
                android:textStyle="bold"
                tools:text="ZAPISZ" />

            <Button
                android:id="@+id/button_usun_wage"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/waga_z_dnia"
                android:layout_marginEnd="36dp"
                android:text="USUŃ"
                android:textStyle="bold"
                tools:text="USUŃ" />

            <TextView
                android:id="@+id/textView_waga_dzienna3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/waga_z_dnia"
                android:layout_alignBottom="@+id/waga_z_dnia"
                android:layout_alignStart="@+id/textView_waga_kalend"
                android:text="Twoja waga:"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView_bmi_obliczone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView_bmi"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/editText_puls"
                android:text="00" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
